<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/user"
        android:title="@string/user" />
    <item
        android:id="@+id/loveFragment"
        android:icon="@drawable/ic_baseline_love"
        android:title="@string/love" />
    <item
        android:id="@+id/calculatorFragment"
        android:icon="@drawable/calculator"
        android:title="@string/calculator" />
    <item
        android:id="@+id/projectFragment"
        android:icon="@drawable/project"
        android:title="@string/project" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/about" />

</menu>